Code improvements by resharper

--- a/_source/LigaCancer/Views/CancerType/_AddCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/_AddCancerType.cshtml
@@ -22,5 +22,5 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 </form>
