--- a/_source/LigaCancer/Views/CancerType/_EditCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/_EditCancerType.cshtml
@@ -24,7 +24,7 @@
         <input type="hidden" asp-for="CancerTypeId" value="@Model.CancerTypeId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
 
