--- a/_source/LigaCancer/Views/Doctor/_EditDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/_EditDoctor.cshtml
@@ -28,6 +28,6 @@
         <input type="hidden" asp-for="DoctorId" value="@Model.DoctorId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
