--- a/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
@@ -24,6 +24,6 @@
         <input type="hidden" asp-for="TreatmentPlaceId" value="@Model.TreatmentPlaceId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
