--- a/_source/LigaCancer/Views/User/_EditUser.cshtml
+++ b/_source/LigaCancer/Views/User/_EditUser.cshtml
@@ -44,6 +44,6 @@
         <input type="hidden" asp-for="UserId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
