--- a/_source/LigaCancer/Views/FamilyMember/_EditFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/_EditFamilyMember.cshtml
@@ -46,6 +46,6 @@
         <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
