--- a/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
@@ -30,6 +30,6 @@
         <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
