--- a/_source/LigaCancer/Views/Medicine/_EditMedicine.cshtml
+++ b/_source/LigaCancer/Views/Medicine/_EditMedicine.cshtml
@@ -24,6 +24,6 @@
         <input type="hidden" asp-for="MedicineId" value="@Model.MedicineId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
