--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -89,10 +89,10 @@
                             </div>
                             <div class="card-body collapse show" id="patientInformationCollapse">
                                 <div class="row">
-                                    @if (Model.PatientInformation.TreatmentPlaces.Count() == 0 &&
-                                      Model.PatientInformation.Doctors.Count() == 0 &&
-                                      Model.PatientInformation.Medicines.Count() == 0 &&
-                                      Model.PatientInformation.CancerTypes.Count() == 0)
+                                    @if (Model.PatientInformation.TreatmentPlaces.Count == 0 &&
+                                      Model.PatientInformation.Doctors.Count == 0 &&
+                                      Model.PatientInformation.Medicines.Count == 0 &&
+                                      Model.PatientInformation.CancerTypes.Count == 0)
                                     {
                                         <div class="col-lg-12">
                                             <p>Nenhuma informação cadastrada!</p>
@@ -105,22 +105,22 @@
                                                 @{
                                                     string className = "active";
                                                 }
-                                                @if (Model.PatientInformation.CancerTypes.Count() > 0)
+                                                @if (Model.PatientInformation.CancerTypes.Count > 0)
                                                 {
                                                     <a class="list-group-item list-group-item-action @className" id="linkListCancerType" data-toggle="tab" href="#listCancerType" role="tab" aria-controls="listCancerType" aria-selected="false">@Html.DisplayNameFor(model => model.PatientInformation.CancerTypes)</a>
                                                     className = "";
                                                 }
-                                                @if (Model.PatientInformation.Medicines.Count() > 0)
+                                                @if (Model.PatientInformation.Medicines.Count > 0)
                                                 {
                                                     <a class="list-group-item list-group-item-action @className" id="linkListMedicine" data-toggle="tab" href="#listMedicine" role="tab" aria-controls="listMedicine" aria-selected="false">@Html.DisplayNameFor(model => model.PatientInformation.Medicines)</a>
                                                     className = "";
                                                 }
-                                                @if (Model.PatientInformation.Doctors.Count() > 0)
+                                                @if (Model.PatientInformation.Doctors.Count > 0)
                                                 {
                                                     <a class="list-group-item list-group-item-action @className" id="linkListDoctor" data-toggle="tab" href="#listDoctor" role="tab" aria-controls="listDoctor" aria-selected="false">@Html.DisplayNameFor(model => model.PatientInformation.Doctors)</a>
                                                     className = "";
                                                 }
-                                                @if (Model.PatientInformation.TreatmentPlaces.Count() > 0)
+                                                @if (Model.PatientInformation.TreatmentPlaces.Count > 0)
                                                 {
                                                     <a class="list-group-item list-group-item-action @className" id="linkListTreatmentPlace" data-toggle="tab" href="#listTreatmentPlace" role="tab" aria-controls="listTreatmentPlace" aria-selected="false">@Html.DisplayNameFor(model => model.PatientInformation.TreatmentPlaces)</a>
                                                     className = "";
@@ -132,7 +132,7 @@
                                                 @{
                                                     className = "active show";
                                                 }
-                                                @if (Model.PatientInformation.CancerTypes.Count() > 0)
+                                                @if (Model.PatientInformation.CancerTypes.Count > 0)
                                                 {
                                                     <div class="tab-pane fade @className" id="listCancerType" role="tabpanel" aria-labelledby="linkListCancerType">
                                                         <ul class="list-group">
@@ -144,11 +144,11 @@
                                                     </div>
                                                     className = "";
                                                 }
-                                                @if (Model.PatientInformation.Medicines.Count() > 0)
+                                                @if (Model.PatientInformation.Medicines.Count > 0)
                                                 {
                                                     <div class="tab-pane fade @className" id="listMedicine" role="tabpanel" aria-labelledby="list-profile-list">
                                                         <ul class="list-group">
-                                                            @foreach (var item in Model.PatientInformation.Medicines)
+                                                            @foreach (string item in Model.PatientInformation.Medicines)
                                                             {
                                                                 <li class="list-group-item">@item</li>
                                                             }
@@ -156,11 +156,11 @@
                                                     </div>
                                                     className = "";
                                                 }
-                                                @if (Model.PatientInformation.Doctors.Count() > 0)
+                                                @if (Model.PatientInformation.Doctors.Count > 0)
                                                 {
                                                     <div class="tab-pane fade @className" id="listDoctor" role="tabpanel" aria-labelledby="list-messages-list">
                                                         <ul class="list-group">
-                                                            @foreach (var item in Model.PatientInformation.Doctors)
+                                                            @foreach (string item in Model.PatientInformation.Doctors)
                                                             {
                                                                 <li class="list-group-item">@item</li>
                                                             }
@@ -168,11 +168,11 @@
                                                     </div>
                                                     className = "";
                                                 }
-                                                @if (Model.PatientInformation.TreatmentPlaces.Count() > 0)
+                                                @if (Model.PatientInformation.TreatmentPlaces.Count > 0)
                                                 {
                                                     <div class="tab-pane fade @className" id="listTreatmentPlace" role="tabpanel" aria-labelledby="list-settings-list">
                                                         <ul class="list-group">
-                                                            @foreach (var item in Model.PatientInformation.TreatmentPlaces)
+                                                            @foreach (string item in Model.PatientInformation.TreatmentPlaces)
                                                             {
                                                                 <li class="list-group-item">@item</li>
                                                             }
