--- a/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
@@ -128,7 +128,7 @@
         <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
 
