--- a/_source/LigaCancer/Views/Phone/_AddPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/_AddPhone.cshtml
@@ -36,6 +36,6 @@
         <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
