--- a/_source/LigaCancer/Views/Phone/_EditPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/_EditPhone.cshtml
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
