--- a/_source/LigaCancer/Views/TreatmentPlace/_AddTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_AddTreatmentPlace.cshtml
@@ -23,6 +23,6 @@
         </div>
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
