--- a/_source/LigaCancer/Views/User/_AddUser.cshtml
+++ b/_source/LigaCancer/Views/User/_AddUser.cshtml
@@ -51,6 +51,6 @@
         <input type="hidden" asp-for="UserId" />
     </div>
 
-    <partial name="_ModalFooter" model='new ModalFooter { }' />
+    <partial name="_ModalFooter" model="new ModalFooter { }" />
 
 </form>
