--- a/_source/LigaCancer/Views/Account/SendCode.cshtml
+++ b/_source/LigaCancer/Views/Account/SendCode.cshtml
@@ -16,6 +16,6 @@
     </div>
 </form>
 
-@section Scripts {
+@section scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
