--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section Styles{
+@section styles{
     <environment names="Development">
         <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
     </environment>
