--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@section Styles{
+@section styles{
     <environment names="Development">
         <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
         <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
