--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
 
-    @RenderSection("Styles", required: false)
+    @RenderSection("styles", required: false)
 </head>
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
@@ -130,7 +130,7 @@
         <script src="~/dist/js/main.min.js" asp-append-version="true"></script>
     </environment>
     
-    @RenderSection("Scripts", required: false)
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
