--- a/_source/LigaCancer/Views/Account/Login.cshtml
+++ b/_source/LigaCancer/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Login | Rede Videirense do Cancêr</title>
     <environment names="Development">
-        <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/fontawesome.min.css/" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
     </environment>
