--- a/_source/LigaCancer/Views/Home/Index.cshtml
+++ b/_source/LigaCancer/Views/Home/Index.cshtml
@@ -170,7 +170,7 @@
 @section scripts {
     <environment names="Development">
         <script src="~/lib/chart-js/Chart.min.js"></script>
-        <script src="~/lib/core-ui/custom-tooltips.min.js"></script>
+        <script src="~/js/custom-tooltips.min.js"></script>
         <script src="~/js/home.js"></script>
     </environment>
     <environment exclude="Development">
