--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <environment names="Development">
-        <link href="~/lib/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/fontawesome.min.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
     </environment>
@@ -122,7 +122,7 @@
 
     <environment names="Development">
         <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
-        <script src="~/lib/core-ui/coreui.min.js" asp-append-version="true"></script>
+        <script src="~/js/coreui.min.js" asp-append-version="true"></script>
         <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
         <script src="~/js/main.js" asp-append-version="true"></script>
     </environment>
