--- a/_source/LigaCancer/Views/Account/Login.cshtml
+++ b/_source/LigaCancer/Views/Account/Login.cshtml
@@ -18,9 +18,9 @@
     <base href="./">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login | Rede Videirense do Cancêr</title>
+    <title>Login | Rede Videirense do Câncer</title>
     <environment names="Development">
-        <link href="~/css/fontawesome.min.css/" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/fontawesome.min.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
     </environment>
