--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -50,22 +50,23 @@
                             <i class="nav-icon fa fa-male"></i> Pacientes
                         </a>
                     </li>
-                    @*<li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-clipboard-list"></i> Presença
-                            </a>
-                        </li>*@
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Presence" class="nav-link">
+                            <i class="nav-icon fa fa-clipboard-list"></i> Presença
+                        </a>
+                    </li>
+
                     @*<li class="nav-title">Benefícios</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-gift"></i> Benefícios
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-clipboard"></i> Tipos de Benefícios
-                            </a>
-                        </li>*@
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="nav-icon fa fa-gift"></i> Benefícios
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <i class="nav-icon fa fa-clipboard"></i> Tipos de Benefícios
+                        </a>
+                    </li>*@
                     <li class="nav-title">Informações Médicas</li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Medicine" class="nav-link">
@@ -88,16 +89,16 @@
                         </a>
                     </li>
                     @*<li class="nav-title">Relatórios</li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-file-medical"></i> Relatórios
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <i class="nav-icon fa fa-file-medical-alt"></i> Relatórios Pessoais
-                            </a>
-                        </li> *@
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="nav-icon fa fa-file-medical"></i> Relatórios
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="nav-icon fa fa-file-medical-alt"></i> Relatórios Pessoais
+            </a>
+        </li> *@
                     @if (User.IsInRole("Admin"))
                     {
                         <li class="nav-title">Administrativo</li>
