--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -1,20 +1,19 @@
 ﻿@model LigaCancer.Models.SearchViewModels.PresenceSearchViewModel
 @using LigaCancer.Code
 @{
-    ViewData["Title"] = "Presença";
+    ViewData["Title"] = "Presenças";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @section styles{
-<environment names="Development">
-    <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
-    <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
+    <environment names="Development">
+        <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
 
-</environment>
+    </environment>
     <environment exclude="Development">
-        <link href="~/dist/css/patient.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
 }
 
@@ -52,7 +51,7 @@
                                 <div class="form-row form-group">
                                     <div class="col-lg-3">
                                         <label asp-for="Patient"></label>
-                                        <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap" name="state" >
+                                        <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap" name="state">
                                             <option value="" selected></option>
                                         </select>
                                     </div>
@@ -71,10 +70,7 @@
                                     </div>
 
                                 </div>
-
-
                                 <hr />
-
                                 <table class="table table-bordered table-striped table-condensed text-center">
                                     <thead>
                                         <tr>
@@ -87,62 +83,60 @@
                                     <tbody>
                                         @foreach (var item in Model.Presences)
                                         {
-                                        <tr>
-                                            <td>@item.Patient.FirstName</td>
-                                            <td>@item.PresenceDateTime.Date.ToShortDateString()</td>
-                                            <td>@item.PresenceDateTime.ToShortTimeString()</td>
-                                            <td>
-                                                <div class="form-row form-group justify-content-md-center">
-                                                    <div class="form-inline">
-                                                        <div class="form-group">
-                                                            <div class="ml-2 btn-group">
-                                                                <a asp-action="EditPresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-secondary">
-                                                                    <i class="fas fa-edit"></i>
-                                                                    Editar
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="form-inline">
-                                                        <div class="form-group">
-                                                            <div class="ml-2 btn-group">
-                                                                <a asp-action="DeletePresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-danger">
-                                                                    <i class="fas fa-trash-alt"></i>
-                                                                    Excluir
-                                                                </a>
-                                                            </div>
+
+                                        <td>@item.Patient.FirstName</td>
+                                        <td>@item.PresenceDateTime.Date.ToShortDateString()</td>
+                                        <td>@item.PresenceDateTime.ToShortTimeString()</td>
+                                        <td>
+                                            <div class="form-row form-group justify-content-md-center">
+                                                <div class="form-inline">
+                                                    <div class="form-group">
+                                                        <div class="ml-2 btn-group">
+                                                            <a asp-action="EditPresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-secondary">
+                                                                <i class="fas fa-edit"></i>
+                                                                Editar
+                                                            </a>
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </td>
-                                        </tr>
-                                        }
-                                    </tbody>
-                                </table>
+                                                <div class="form-inline">
+                                                    <div class="form-group">
+                                                        <div class="ml-2 btn-group">
+                                                            <a asp-action="DeletePresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-danger">
+                                                                <i class="fas fa-trash-alt"></i>
+                                                                Excluir
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    }
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
-
                         </div>
                     </div>
+                    <!--/col-->
+
                 </div>
-                <!--/col-->
+                <!--/row-->
 
             </div>
-            <!--/row-->
-
         </div>
-    </div>
-    <!-- /.conainer-fluid -->
-</main>
+        <!-- /.conainer-fluid -->
+    </main>
 
-<partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
+    <partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
 
-@section scripts {
-    <partial name="_ValidationScriptsPartial" />
-    <environment names="Development">
-        <script src="~/lib/select2/js/select2.min.js"></script>
-        <script src="~/js/presence.js"></script>
-        <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
-    </environment>
-    <environment exclude="Development">
-    </environment>
-}
+    @section scripts {
+        <partial name="_ValidationScriptsPartial" />
+        <environment names="Development">
+            <script src="~/lib/select2/js/select2.min.js"></script>
+            <script src="~/js/presence.js"></script>
+            <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
+        </environment>
+        <environment exclude="Development">
+        </environment>
+    }
