--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -74,69 +74,70 @@
                                 <table class="table table-bordered table-striped table-condensed text-center">
                                     <thead>
                                         <tr>
-                                            <th scope="col">Nome do Paciente</th>
-                                            <th scope="col">Data da Presença</th>
-                                            <th scope="col">Hora da Presença</th>
-                                            <th scope="col">Ações</th>
+                                            <th>Nome do Paciente</th>
+                                            <th>Data da Presença</th>
+                                            <th>Hora da Presença</th>
+                                            <th>Ações</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         @foreach (var item in Model.Presences)
                                         {
-
-                                        <td>@item.Patient.FirstName</td>
-                                        <td>@item.PresenceDateTime.Date.ToShortDateString()</td>
-                                        <td>@item.PresenceDateTime.ToShortTimeString()</td>
-                                        <td>
-                                            <div class="form-row form-group justify-content-md-center">
-                                                <div class="form-inline">
-                                                    <div class="form-group">
-                                                        <div class="ml-2 btn-group">
-                                                            <a asp-action="EditPresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-secondary">
-                                                                <i class="fas fa-edit"></i>
-                                                                Editar
-                                                            </a>
+                                            <tr>
+                                                <td>@item.Patient.FirstName</td>
+                                                <td>@item.PresenceDateTime.Date.ToShortDateString()</td>
+                                                <td>@item.PresenceDateTime.ToShortTimeString()</td>
+                                                <td>
+                                                    <div class="form-row form-group justify-content-md-center">
+                                                        <div class="form-inline">
+                                                            <div class="form-group">
+                                                                <div class="ml-2 btn-group">
+                                                                    <a asp-action="EditPresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-secondary">
+                                                                        <i class="fas fa-edit"></i>
+                                                                        Editar
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-inline">
+                                                            <div class="form-group">
+                                                                <div class="ml-2 btn-group">
+                                                                    <a asp-action="DeletePresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-danger">
+                                                                        <i class="fas fa-trash-alt"></i>
+                                                                        Excluir
+                                                                    </a>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
-                                                </div>
-                                                <div class="form-inline">
-                                                    <div class="form-group">
-                                                        <div class="ml-2 btn-group">
-                                                            <a asp-action="DeletePresence/@item.PresenceId" data-toggle="modal" data-target="#modal-action" class="btn btn-danger">
-                                                                <i class="fas fa-trash-alt"></i>
-                                                                Excluir
-                                                            </a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    }
-                                        </tbody>
-                                    </table>
-                                </div>
+                                                </td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
-                    <!--/col-->
-
                 </div>
-                <!--/row-->
+                <!--/col-->
 
             </div>
+            <!--/row-->
+
         </div>
-        <!-- /.conainer-fluid -->
-    </main>
+    </div>
+    <!-- /.conainer-fluid -->
+</main>
 
-    <partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
+<partial name="_Modal" model='new BootstrapModel { Id = "modal-action", AreaLabeledId = "modal-action-label", Size = Globals.ModalSize.Medium }' />
 
-    @section scripts {
-        <partial name="_ValidationScriptsPartial" />
-        <environment names="Development">
-            <script src="~/lib/select2/js/select2.min.js"></script>
-            <script src="~/js/presence.js"></script>
-            <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
-        </environment>
-        <environment exclude="Development">
-        </environment>
-    }
+@section scripts {
+    <partial name="_ValidationScriptsPartial" />
+    <environment names="Development">
+        <script src="~/lib/select2/js/select2.min.js"></script>
+        <script src="~/js/presence.js"></script>
+        <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
+    </environment>
+    <environment exclude="Development">
+    </environment>
+}
