--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -51,7 +51,7 @@
                                 <div class="form-row form-group">
                                     <div class="col-lg-3">
                                         <label asp-for="Patient"></label>
-                                        <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap" name="state">
+                                        <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap">
                                             <option value="" selected></option>
                                         </select>
                                     </div>
