--- a/_source/LigaCancer/Views/Presence/_AddPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_AddPresence.cshtml
@@ -18,7 +18,7 @@
 
         <div class="form-group">
             <label asp-for="Patient" class="control-label"></label>
-            <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap" name="state" >
+            <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap">
                 <option value="" selected></option>
 
             </select>
