--- a/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
@@ -17,12 +17,12 @@
 
         <div class="form-group">
             <label asp-for="Patient" class="control-label"></label>
-            <select asp-for="Patient" asp-items="Model.Patients" class="select2 form-control" data-theme="bootstrap" name="state"></select>
+            <select asp-for="Patient" asp-items="Model.Patients" class="select2 form-control" data-theme="bootstrap"></select>
             <span asp-validation-for="Patient" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Date" class="control-label"></label>
-            <input asp-for="Date" type="text" class="form-control date" />
+            <input asp-for="Date" type="text" class="form-control date" data-theme="bootstrap"/>
             <span asp-validation-for="Date" class="text-danger"></span>
         </div>
         <div class="form-group">
