--- a/_source/LigaCancer/Views/Doctor/_DeleteDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/_DeleteDoctor.cshtml
@@ -4,8 +4,8 @@
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccess"
+      data-ajax-failure="Error"
+      data-ajax-success="Success"
       data-ajax-loading="#submitSpinner">
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Apagar Médico" }' />
