--- a/_source/LigaCancer/Views/Presence/_DeletePresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_DeletePresence.cshtml
@@ -4,8 +4,8 @@
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxErrorPresence"
-      data-ajax-success="AjaxSuccessPresence"
+      data-ajax-failure="Error"
+      data-ajax-success="Success"
       data-ajax-loading="#submitSpinner">
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Apagar Presença" }' />
