--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -6,13 +6,13 @@
 }
 
 @section styles{
-    <environment names="Development">
-        <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
-        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-        <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
-        <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
+<environment names="Development">
+    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+    <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
 
-    </environment>
+</environment>
     <environment exclude="Development">
     </environment>
 }
@@ -51,18 +51,23 @@
                                 <div class="form-row form-group">
                                     <div class="col-lg-3">
                                         <label asp-for="Patient"></label>
-                                        <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap">
-                                            <option value="" selected></option>
-                                        </select>
+                                        <input asp-for="Patient" class="form-control" />
+                                        <span asp-validation-for="Patient" class="text-danger"></span>
                                     </div>
                                     <div class="col-lg-3">
-                                        <label asp-for="Date"></label>
-                                        <input asp-for="Date" type="text" class="form-control date" />
+                                        <label asp-for="DateFrom"></label>
+                                        <input asp-for="DateFrom" type="text" class="form-control date" />
+                                        <span asp-validation-for="DateFrom" class="text-danger"></span>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <label asp-for="DateTo"></label>
+                                        <input asp-for="DateTo" type="text" class="form-control date" />
+                                        <span asp-validation-for="DateTo" class="text-danger"></span>
                                     </div>
                                     <div class="form-inline">
                                         <div class="form-group">
                                             <div class="btn-group">
-                                                <a asp-action="" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                                <a asp-action="" class="btn btn-primary">
                                                     Filtrar
                                                 </a>
                                             </div>
