--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -6,14 +6,14 @@
 }
 
 @section styles{
-<environment names="Development">
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
-    <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
-
-</environment>
+    <environment names="Development">
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
+        <link href="~/lib/gijgo/combined/css/gijgo.min.css" rel="stylesheet" />
+    </environment>
     <environment exclude="Development">
+        @*<link href="~/dist/css/presence.min.css" rel="stylesheet" asp-append-version="true" />*@
     </environment>
 }
 
@@ -47,36 +47,42 @@
                                 </div>
 
                                 <hr />
-
-                                <div class="form-row form-group">
-                                    <div class="col-lg-3">
-                                        <label asp-for="Patient"></label>
-                                        <input asp-for="Patient" class="form-control" />
-                                        <span asp-validation-for="Patient" class="text-danger"></span>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <label asp-for="DateFrom"></label>
-                                        <input asp-for="DateFrom" type="text" class="form-control date" />
-                                        <span asp-validation-for="DateFrom" class="text-danger"></span>
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <label asp-for="DateTo"></label>
-                                        <input asp-for="DateTo" type="text" class="form-control date" />
-                                        <span asp-validation-for="DateTo" class="text-danger"></span>
-                                    </div>
-                                    <div class="form-inline">
-                                        <div class="form-group">
-                                            <div class="btn-group">
-                                                <a asp-action="" class="btn btn-primary">
-                                                    Filtrar
-                                                </a>
+                                <form id="searchForm">
+                                    <div class="form-row form-group">
+                                        <div class="col-lg-3">
+                                            <label asp-for="Name"></label>
+                                            <input asp-for="Name" class="form-control" />
+                                            <span asp-validation-for="Name" class="text-danger"></span>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <label asp-for="Surname"></label>
+                                            <input asp-for="Surname" class="form-control" />
+                                            <span asp-validation-for="Surname" class="text-danger"></span>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <label asp-for="DateFrom"></label>
+                                            <input asp-for="DateFrom" type="text" class="form-control date" />
+                                            <span asp-validation-for="DateFrom" class="text-danger"></span>
+                                        </div>
+                                        <div class="col-lg-3">
+                                            <label asp-for="DateTo"></label>
+                                            <input asp-for="DateTo" type="text" class="form-control date" />
+                                            <span asp-validation-for="DateTo" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-inline">
+                                            <div class="form-group">
+                                                <div class="btn-group">
+                                                    <button type="submit" class="btn btn-primary">Filtrar</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
+                                </form>
 
-                                </div>
                                 <hr />
+                                
                                 <table class="table table-bordered table-striped table-condensed text-center" id="presenceTable"></table>
+
                             </div>
                         </div>
                     </div>
@@ -101,8 +107,8 @@
         <script src="~/lib/select2/js/select2.min.js"></script>
         <script src="~/js/presence.js"></script>
         <script src="~/lib/gijgo/combined/js/gijgo.min.js"></script>
-
     </environment>
     <environment exclude="Development">
+        @*<script src="~/dist/js/presence.min.js" asp-append-version="true"></script>*@
     </environment>
 }
