--- a/_source/LigaCancer/Views/Presence/_AddPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_AddPresence.cshtml
@@ -17,12 +17,11 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <div class="form-group">
-            <label asp-for="Patient" class="control-label"></label>
-            <select asp-for="Patient" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap">
-                <option value="" selected></option>
-
+            <label asp-for="PatientId" class="control-label"></label>
+            <select asp-for="PatientId" asp-items="@Model.Patients" class="select2 form-control" data-theme="bootstrap" data-placeholder="Paciente" data-allow-clear="true">
+                <option value=""></option>
             </select>
-            <span asp-validation-for="Patient" class="text-danger"></span>
+            <span asp-validation-for="PatientId" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Date" class="control-label"></label>
@@ -34,7 +33,6 @@
             <input asp-for="Time" type="text" class="form-control"/>
             <span asp-validation-for="Time" class="text-danger"></span>
         </div>
-
 
     </div>
 
