--- a/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
@@ -1,4 +1,5 @@
 ﻿@model LigaCancer.Models.FormViewModel.PresenceViewModel
+
 <form asp-action="EditPresence"
       role="form"
       data-ajax="true"
@@ -16,18 +17,18 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <div class="form-group">
-            <label asp-for="Patient" class="control-label"></label>
-            <select asp-for="Patient" asp-items="Model.Patients" class="select2 form-control" data-theme="bootstrap"></select>
-            <span asp-validation-for="Patient" class="text-danger"></span>
+            <label asp-for="PatientId" class="control-label"></label>
+            <select asp-for="PatientId" asp-items="Model.Patients" class="select2 form-control" data-theme="bootstrap" data-placeholder="Paciente" data-allow-clear="true"></select>
+            <span asp-validation-for="PatientId" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Date" class="control-label"></label>
-            <input asp-for="Date" type="text" class="form-control date" data-theme="bootstrap"/>
+            <input asp-for="Date" type="text" class="form-control"/>
             <span asp-validation-for="Date" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Time" class="control-label"></label>
-            <input asp-for="Time" type="text" class="form-control" />
+            <input asp-for="Time" type="text" class="form-control"/>
             <span asp-validation-for="Time" class="text-danger"></span>
         </div>
 
