--- a/_source/LigaCancer/Views/Shared/_Modal.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Modal.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LigaCancer.Models.BootstrapModel
 
-<div aria-hidden="true" aria-labelledby="@Model.AreaLabeledId" role="dialog" id="@Model.Id" class="modal fade">
+<div aria-hidden="true" aria-labelledby="@Model.AreaLabeledId" role="dialog" id="@Model.Id" class="modal fade" data-backdrop="static">
     <div class="modal-dialog modal-primary @Model.ModalSizeClass">
         <div class="modal-content" id="modal-content">  
             <span class="fa fa-spinner fa-pulse modal-spinner"></span>
