--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -23,7 +23,7 @@
             <a asp-controller="Home" asp-action="Index">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Presença
+            Presenças
         </li>
     </ol>
     <div class="container-fluid">
@@ -33,20 +33,14 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-male"></i> Presença
-                            </div>
-                            <div class="card-block">
-                                <div class="form-inline">
-                                    <div class="form-group">
-                                        <div class="btn-group">
-                                            <a asp-action="AddPresence" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                                <i class="fa fa-plus"></i> Adicionar Presença
-                                            </a>
-                                        </div>
-                                    </div>
+                                <i class="fas fa-filter"></i> Filtros
+                                <div class="card-header-actions">
+                                    <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
+                                        <i class="fa fa-minus"></i>
+                                    </a>
                                 </div>
-
-                                <hr />
+                            </div>
+                            <div class="card-block collapse show" id="filterCollapse">
                                 <form id="searchForm">
                                     <div class="form-row form-group">
                                         <div class="col-lg-3">
@@ -69,18 +63,31 @@
                                             <input asp-for="DateTo" type="text" class="form-control date" />
                                             <span asp-validation-for="DateTo" class="text-danger"></span>
                                         </div>
-                                        <div class="form-inline">
-                                            <div class="form-group">
-                                                <div class="btn-group">
-                                                    <button type="submit" class="btn btn-primary">Filtrar</button>
-                                                </div>
+                                    </div>
+                                    <div class="form-inline float-right">
+                                        <div class="form-group">
+                                            <div class="btn-group">
+                                                <button type="submit" class="btn btn-primary">
+                                                    <i class="fas fa-filter"></i> Filtrar
+                                                </button>
                                             </div>
                                         </div>
                                     </div>
                                 </form>
+                            </div>
+                        </div>
 
-                                <hr />
-                                
+                        <div class="card">
+                            <div class="card-header">
+                                <i class="fas fa-address-book"></i> Presenças
+                            </div>
+                            <div class="card-block">
+                                <div class="form-inline float-right">
+                                    <a id="addPresenceButton" asp-action="AddPresence" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                        <i class="fa fa-plus"></i> Adicionar Presença
+                                    </a>
+                                </div>
+
                                 <table class="table table-bordered table-striped table-condensed text-center" id="presenceTable"></table>
 
                             </div>
