--- a/_source/LigaCancer/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/_source/LigaCancer/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,8 +1,7 @@
 ﻿<environment names="Development">
-    <script src="~/lib/jquery-validate/jquery.validate.min.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
-    <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.min.js" asp-append-version="true"></script>
-    <script src="~/lib/sweetalert/sweetalert.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/lib/jquery-ajax-unobtrusive/dist/jquery.unobtrusive-ajax.min.js"></script>
 </environment>
 <environment exclude="Development">
     <script src="~/dist/js/form.min.js" asp-append-version="true"></script>
