Adjust required fields to show * and change spinner of datatables

--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -89,8 +89,11 @@
                                 </div>
 
                                 <table class="table table-bordered table-striped table-condensed text-center" id="presenceTable"></table>
-
+                                <div id="spinner-container" style="display: none;">
+                                    <i class="fa fa-spinner fa-spin" id="spinner"></i>
+                                </div>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
