--- a/_source/LigaCancer/wwwroot/css/custom.css
+++ b/_source/LigaCancer/wwwroot/css/custom.css
@@ -4,3 +4,27 @@
     font-size: 50px;
     color: #20a8d8;
 }
+
+#spinner {
+    font-size: 120px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -60px 0 0 -60px;
+}
+
+#spinner-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    /*background-color: black;*/
+    /*opacity: .5;*/
+}
+
+.label-required:after {
+    content: "*";
+    color: red;
+}
