--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -11,9 +11,7 @@
     <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
     <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
     <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
-    <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
-    <link href="https://cdn.datatables.net/buttons/1.5.2/css/buttons.dataTables.min.css" />
-
+    <link href="https://cdn.datatables.net/buttons/1.5.4/css/buttons.bootstrap4.min.css" />
 
 </environment>
     <environment exclude="Development">
@@ -134,22 +132,24 @@
     <environment names="Development">
 
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-        <script src="~/js/patient.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-        <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.flash.min.js"></script>
+        <script src="~/js/patient.js"></script>
+        <script src="~/lib/select2/js/select2.min.js"></script>
+
+
+        //Todo Change this to use Package Manager
+        <script src="https://cdn.datatables.net/buttons/1.5.4/js/datatables.buttons.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.bootstrap4.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.colVis.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.html5.min.js"></script>
 
 
 
-        <script src="~/lib/select2/js/select2.min.js"></script>
+
+
+
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/patient.min.js" asp-append-version="true"></script>
