--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
                     </li>
                     <li class="nav-item">
                         <a asp-action="Index" asp-controller="Presence" class="nav-link">
-                            <i class="nav-icon fa fa-clipboard-list"></i> Presença
+                            <i class="nav-icon fa fa-clipboard-list"></i> Presenças
                         </a>
                     </li>
 
