--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -29,23 +29,46 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
+                                <i class="fas fa-filter"></i> Filtros
+                                <div class="card-header-actions">
+                                    <a class="card-header-action btn-minimize" href="#" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="true">
+                                        <i class="fa fa-minus"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="card-block collapse show" id="filterCollapse">
+                                <form id="searchForm">
+                                    <div class="form-row form-group">
+                                    </div>
+                                    <div class="form-inline float-right">
+                                        <div class="form-group">
+                                            <div class="btn-group">
+                                                <button type="submit" class="btn btn-primary">
+                                                    <i class="fas fa-filter"></i> Filtrar
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                        
+                        <div class="card">
+                            <div class="card-header">
                                 <i class="fa fa-hospital-alt"></i> Cidades
                             </div>
                             <div class="card-block">
-                                <div class="form-inline">
-                                    <div class="form-group">
-                                        <div class="btn-group">
-                                            <a asp-action="AddTreatmentPlace" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
-                                                <i class="fa fa-plus"></i> Adicionar Cidade
-                                            </a>
-                                        </div>
-                                    </div>
+                                <div class="form-inline float-right">
+                                    <a id="addTreatmentPlaceButton" asp-action="AddTreatmentPlace" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                        <i class="fa fa-plus"></i> Adicionar Cidade
+                                    </a>
                                 </div>
 
-                                <hr />
-
                                 <table class="table table-bordered table-striped table-condensed text-center" id="treatmentPlaceTable"></table>
-
+                                
+                                <div id="spinner-container" style="display: none;">
+                                    <i class="fa fa-spinner fa-spin" id="spinner"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -68,6 +91,12 @@
     <environment names="Development">
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+        <script src="~/lib/datatables-buttons/js/dataTables.buttons.min.js"></script>
+        <script src="~/lib/datatables-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
+        <script src="~/lib/jszip/jszip.min.js"></script>
+        <script src="~/lib/pdfmake/pdfmake.min.js"></script>
+        <script src="~/lib/pdfmake/vfs_fonts.js"></script>
+        <script src="~/lib/datatables-buttons/js/buttons.html5.min.js"></script>
         <script src="~/js/treatmentPlace.js"></script>
     </environment>
     <environment exclude="Development">
