--- a/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
@@ -1,11 +1,11 @@
-﻿@model LigaCancer.Models.FormViewModel.TreatmentPlaceViewModel
+﻿@model LigaCancer.Models.FormViewModel.TreatmentPlaceFormModel
 
-<form asp-action="EditTreatmentPlace"
+<form id="editTreatmentPlaceForm"  asp-action="EditTreatmentPlace"
       role="form"
       data-ajax="true"
       data-ajax-method="POST"
-      data-ajax-failure="AjaxError"
-      data-ajax-success="AjaxSuccess"
+      data-ajax-failure="Error"
+      data-ajax-success="EditSuccess"
       data-ajax-loading="#submitSpinner">
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Cidade" }' />
