--- a/_source/LigaCancer/wwwroot/css/custom.css
+++ b/_source/LigaCancer/wwwroot/css/custom.css
@@ -38,5 +38,9 @@
 .export-buttons {
     position: absolute;
     left: 280px;
-    top: 20%;
+    top: 60px;
+}
+
+.filter{
+    margin-top: 28px;
 }
