--- a/_source/LigaCancer/Views/Address/_AddAddress.cshtml
+++ b/_source/LigaCancer/Views/Address/_AddAddress.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.AddressViewModel
+﻿@model LigaCancer.Models.FormModel.AddressFormModel
 @using LigaCancer.Code
 
 <form asp-action="AddAddress"
