--- a/_source/LigaCancer/Views/CancerType/_EditCancerType.cshtml
+++ b/_source/LigaCancer/Views/CancerType/_EditCancerType.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.CancerTypeViewModel
+﻿@model LigaCancer.Models.FormModel.CancerTypeFormModel
 
 <form asp-action="EditCancerType"
       role="form"
