--- a/_source/LigaCancer/Views/FamilyMember/_EditFamilyMember.cshtml
+++ b/_source/LigaCancer/Views/FamilyMember/_EditFamilyMember.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.FamilyMemberViewModel
+﻿@model LigaCancer.Models.FormModel.FamilyMemberFormModel
 @using LigaCancer.Code
 
 <form asp-action="EditFamilyMember"
