--- a/_source/LigaCancer/Views/Medicine/_AddMedicine.cshtml
+++ b/_source/LigaCancer/Views/Medicine/_AddMedicine.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.MedicineViewModel
+﻿@model LigaCancer.Models.FormModel.MedicineFormModel
 
 <form asp-action="AddMedicine"
       role="form"
