--- a/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/DetailsPatient.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.PatientShowViewModel
+﻿@model LigaCancer.Models.FormModel.PatientShowFormModel
 @using LigaCancer.Code
 @{
     ViewData["Title"] = Model.Name;
