--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.SearchViewModel.PatientSearchViewModel
+﻿@model LigaCancer.Models.SearchModel.PatientSearchModel
 @using LigaCancer.Code
 @{
     ViewData["Title"] = "Pacientes";
