--- a/_source/LigaCancer/Views/Patient/_DisablePatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_DisablePatient.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.DisablePatientViewModel
+﻿@model LigaCancer.Models.FormModel.DisablePatientFormModel
 @using LigaCancer.Code
 
 <form asp-action="DisablePatient"
