--- a/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.PatientViewModel
+﻿@model LigaCancer.Models.FormModel.PatientFormModel
 @using LigaCancer.Code
 
 <form asp-action="EditPatient"
