--- a/_source/LigaCancer/Views/Phone/_AddPhone.cshtml
+++ b/_source/LigaCancer/Views/Phone/_AddPhone.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.PhoneViewModel
+﻿@model LigaCancer.Models.FormModel.PhoneFormModel
 @using LigaCancer.Code
 
 <form asp-action="AddPhone"
