--- a/_source/LigaCancer/Views/Presence/Index.cshtml
+++ b/_source/LigaCancer/Views/Presence/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.SearchViewModel.PresenceSearchViewModel
+﻿@model LigaCancer.Models.SearchModel.PresenceSearchModel
 @using LigaCancer.Code
 @{
     ViewData["Title"] = "Presenças";
