--- a/_source/LigaCancer/Views/Presence/_AddPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_AddPresence.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.PresenceViewModel
+﻿@model LigaCancer.Models.FormModel.PresenceFormModel
 
 <form id="addPresenceForm" asp-action="AddPresence"
       role="form"
