--- a/_source/LigaCancer/Views/TreatmentPlace/_AddTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_AddTreatmentPlace.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.TreatmentPlaceFormModel
+﻿@model LigaCancer.Models.FormModel.TreatmentPlaceFormModel
 
 <form id="addTreatmentPlaceForm"  asp-action="AddTreatmentPlace"
       role="form"
