--- a/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/_EditTreatmentPlace.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.TreatmentPlaceFormModel
+﻿@model LigaCancer.Models.FormModel.TreatmentPlaceFormModel
 
 <form id="editTreatmentPlaceForm"  asp-action="EditTreatmentPlace"
       role="form"
