--- a/_source/LigaCancer/Views/User/_AddUser.cshtml
+++ b/_source/LigaCancer/Views/User/_AddUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.UserViewModels.UserViewModel
+﻿@model LigaCancer.Models.UserViewModels.UserFormModel
 @using LigaCancer.Code
 
 <form asp-action="AddUser"
