--- a/_source/LigaCancer/Views/User/_EditUser.cshtml
+++ b/_source/LigaCancer/Views/User/_EditUser.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.UserViewModels.EditUserViewModel
+﻿@model LigaCancer.Models.UserViewModels.EditUserFormModel
 @using LigaCancer.Code
 
 <form asp-action="EditUser"
