--- a/_source/LigaCancer/Views/Doctor/_AddDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/_AddDoctor.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.DoctorFormViewModel
+﻿@model LigaCancer.Models.FormModel.DoctorFormModel
 
 <form asp-action="AddDoctor"
       role="form"
