--- a/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
+++ b/_source/LigaCancer/Views/FileAttachment/_AddFileAttachment.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.FileAttachmentViewModel
+﻿@model LigaCancer.Models.FormModel.FileAttachmentFormModel
 @using LigaCancer.Code
 
 <form id="formAddFile" asp-action="AddFileAttachment" method="post" enctype="multipart/form-data">
