--- a/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
+++ b/_source/LigaCancer/Views/Presence/_EditPresence.cshtml
@@ -1,4 +1,4 @@
-﻿@model LigaCancer.Models.FormViewModel.PresenceViewModel
+﻿@model LigaCancer.Models.FormModel.PresenceFormModel
 
 <form id="editPresenceForm" asp-action="EditPresence"
       role="form"
