57-Changes on presence and doctor

--- a/_source/LigaCancer/Views/Doctor/_EditDoctor.cshtml
+++ b/_source/LigaCancer/Views/Doctor/_EditDoctor.cshtml
@@ -5,7 +5,7 @@
       data-ajax="true"
       data-ajax-method="POST"
       data-ajax-failure="Error"
-      data-ajax-success="Success"
+      data-ajax-success="EditSuccess"
       data-ajax-loading="#submitSpinner">
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Médico" }' />
