--- a/_source/LigaCancer/Views/Medicine/Index.cshtml
+++ b/_source/LigaCancer/Views/Medicine/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using LigaCancer.Code
+﻿@model LigaCancer.Models.SearchModel.MedicineSearchModel
+@using LigaCancer.Code
 @{
     ViewData["Title"] = "Remédios";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -38,12 +39,15 @@
                             </div>
                             <div class="card-block collapse show" id="filterCollapse">
                                 <form id="searchForm">
-                                    <div class="form-row form-group">
-                                    </div>
-                                    <div class="form-inline float-right">
-                                        <div class="form-group">
-                                            <div class="btn-group">
-                                                <button type="submit" class="btn btn-primary">
+                                    <div>
+                                        <div class="col-lg-12 form-row">
+                                            <div class="col-lg-3 form-group">
+                                                <label asp-for="Name"></label>
+                                                <input asp-for="Name" class="form-control" />
+                                                <span asp-validation-for="Name" class="text-danger"></span>
+                                            </div>
+                                            <div class="col-lg-3 form-group">
+                                                <button type="submit" class="btn btn-primary filter">
                                                     <i class="fas fa-filter"></i> Filtrar
                                                 </button>
                                             </div>
