--- a/_source/LigaCancer/Views/Account/Login.cshtml
+++ b/_source/LigaCancer/Views/Account/Login.cshtml
@@ -61,7 +61,7 @@
                                         <button class="btn btn-primary px-4" type="submit">Login</button>
                                     </div>
                                     <div class="col-6 text-right">
-                                        @*todo: fazer o reset*@
+                                        @*todo: do the reset *@
                                         <button class="btn btn-link px-0 disabled" type="button">Esqueceu a senha?</button>
                                     </div>
                                     
