--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -6,14 +6,11 @@
 }
 
 @section styles{
-<environment names="Development">
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
-    <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
-
-    @*Todo Change this to use Package Manager*@
-    <link href="https://cdn.datatables.net/buttons/1.5.4/css/buttons.bootstrap4.min.css" />
-</environment>
+    <environment names="Development">
+        <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/theme/select2-bootstrap.min.css" rel="stylesheet" />
+        <link href="~/lib/select2/css/select2.min.css" rel="stylesheet" />
+    </environment>
     <environment exclude="Development">
         <link href="~/dist/css/patient.min.css" rel="stylesheet" asp-append-version="true" />
     </environment>
@@ -41,9 +38,9 @@
                                 <div class="form-inline">
                                     <div class="form-group">
                                         <div class="btn-group">
-                                            <a asp-action="AddPatient" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
+                                            @*<a asp-action="AddPatient" data-toggle="modal" data-target="#modal-action" class="btn btn-primary">
                                                 <i class="fa fa-plus"></i> Adicionar Paciente
-                                            </a>
+                                            </a>*@
                                         </div>
                                     </div>
                                 </div>
@@ -130,20 +127,10 @@
 @section scripts {
     <partial name="_ValidationScriptsPartial" />
     <environment names="Development">
-
         <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
         <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
         <script src="~/js/patient.js"></script>
         <script src="~/lib/select2/js/select2.min.js"></script>
-
-        @*Todo Change this to use Package Manager*@
-        @*<script src="https://cdn.datatables.net/buttons/1.5.4/js/datatables.buttons.min.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.bootstrap4.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-        <script src="https://cdn.datatables.net/buttons/1.5.4/js/buttons.html5.min.js"></script>*@
-
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/patient.min.js" asp-append-version="true"></script>
